Fixed out of the box issue

--- a/Register.css
+++ b/Register.css
@@ -6,19 +6,16 @@ body{
 	background-position:center;
 	font-family:serif;
 }
+
 .loginbox{
-	width:800px;
-	height: 350px;
+	width: 50vw;
 	background: black;
 	color:white;
-	top: 50%;
-	left:50%;
-	position: absolute;
-	transform: translate(-50%,-50%);
-	box-sizing: border-box;
 	margin-top:50px;
-	margin-bottom:50px ;
+	margin-bottom:50px;
 	border-top: 15px;
+	position: absolute;
+	box-sizing: border-box;
 
 }
 h1{
@@ -28,6 +25,7 @@ h1{
 	font-size: 25px;
 	color:lightgreen;
 }
+
 .eye-icon{
 	color:white;
 	background-color: white;
@@ -35,9 +33,13 @@ h1{
 
 .loginbox{
 	border-radius:30px;
-	padding-left: auto;
-	padding-right: auto;
-	height: 600px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+#maincontainer{
+	display:flex;
+	justify-content: center;
 }
 
 .loginbox p{
@@ -70,14 +72,19 @@ h1{
 	border-left:30px;
 	border-right:30px;
 	background: transparent;
-	background-color:lightgreen;
+	background-color:rgb(104, 104, 104);
 	outline:none;
-	border: 1px solid white;
+	border: 1px solid rgb(72, 70, 70);
 	height: 40px;
 	width: 98%;
-	color:white;
+	color:rgb(255, 255, 255);
 	font-size: 17px;
 	text-align: center;
+}
+
+.loginbox input[type="submit"]:hover{
+	background-color: rgba(104, 104, 104,0.7);
+	cursor: pointer
 }
 
 nav {
@@ -130,8 +137,9 @@ a{
 	color:white; 
 }
 p{
-	color:lightgreen;
+	color:rgb(242, 242, 242);
 	text-align: center;
 	border-bottom: 25px;
 	border-radius: 25px;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
