--- a/css/index.css
+++ b/css/index.css
@@ -3,22 +3,31 @@
     padding: 0;
 }
 
+body{
+    background-color: white;
+}
+
 html{
     font-size: 5px;
+    font-family: cursive;
 }
 
 #home{
     font-size: 3rem;
     color: white;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.89);
     background-image: url('../images/homebackground.jpg');
     background-blend-mode: darken;
-    
+    transition: width 2s;
 }
 
 #navbar{
+    position: fixed;
+    top: 0;
+    width: 100%;
+
     border: 1px solid black;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: rgba(0, 0, 0);
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
@@ -38,9 +47,11 @@ html{
 #navbar ul li{
     list-style: none;
     margin: 4px 5px;
-
 }
 
+#navbar ul li:hover{
+    background-color: black;
+}
 
 #navbar ul li a{
     text-decoration: none;
@@ -48,12 +59,16 @@ html{
     font-size: 3.4rem;
 
 }
+#navbar ul li a:hover{
+    color: rgb(150, 124, 124);
+}
 
 #header{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 85vh;
+    height: 90vh;
+    font-style: italic;
 }
 
 #headerinfo{
@@ -90,8 +105,11 @@ html{
     align-items: center;
     position: fixed;
     bottom:0;
-    background-color: rgb(31, 29, 29,0.9);
+    background-color: rgb(0, 0, 0);
     width: 100%;
+
+    /* To be removed lines */
+    /* display: none; */
 }
 
 .signbtn{
@@ -102,22 +120,59 @@ html{
     border-radius: 12px;
     width: 25rem;
     border: none;
+    border: 1px solid rgb(74, 86, 80);
 }
 
 .signbtn:hover{
     cursor: pointer;
-    background-color: rgba(74, 86, 80,0.7);
-    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: rgb(255, 255, 255);
 }
 
 /* Services */
 
 #services{
     color: rgb(30, 28, 28);
-    height: 50vh;
-    font-size: 5rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
+    font-size: 3vw;
+    font-family: monospace;
+    font-weight: bolder;
     text-align: center;
+
+    border: 3px solid black;
+    margin: 5px 10px;
+
+    /* Code to be removed */
+    height: 200vh;
+
+
+}
+
+#servicesitems{
+    margin: 20px 5px;
+}
+
+.serviceimg{
+    width: 70rem;
+}
+
+#serviceheading{
+    text-decoration: underline;
+}
+
+.flex-row{
+    display: flex;
+    flex-direction: row;
+}
+
+.servicesitem{
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#services p{
+    font-size: 2vw;
+    text-align:  center;
 }
 
 /* Responsiveness */
@@ -135,31 +190,36 @@ html{
     #navbar ul li{
         text-align: center;
     }
-    #navbar{
+    #navbar,.media{
         flex-direction: column;
     }
     #hamburg{
         display: block;
     }
 }
-@media only screen and (max-width:290px){
+/* @media only screen and (max-width:290px){
     html{
         font-size: 4px;
     }
-}
-@media only screen and (max-width:208px){
-    html{
+} */
+@media only screen and (max-width:232px){
+    /* html{
         font-size: 3px;
-    }
+    } */
     .signbtn{
         width: 50%;
     }
 }
+
 @media only screen and (max-width:166px){
-    html{
+    /* html{
         font-size: 1px;
-    }
+    } */
     .signbtn{
         border-radius: 5px;
     }
+}
+
+#littleinfo{
+    margin-bottom: 10px;
 }
